# stack_splitter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  stack_splitter.py
input/: 00_-_ICO11_-_All_Tests_-_TC.xml
src/StackSplitter/: __init__.py  __main__.py
