[project]
name = "StackSplitter"
authors = [{name = "Romolo Politi", email = "romolo.politi@inaf.it"}]
description="Command Stack splitter"
version = "0.1.0"
requires-python = ">=3.6"
license = {text = "GNU GPL ver3"} 
readme = "README.md"
dependencies = [
    "rich-click"
]

[project.urls]
Repository = "https://github.com/RomoloPoliti-INAF/stack_splitter"
Changelog = "https://github.com/RomoloPoliti-INAF/stack_splitter/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
stack_splitter = "StackSplitter.__main__:action"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"