[project]
authors = [{name = "Romolo Politi", email = "romolo.politi@inaf.it"}]
description = "Command Stack splitter"
name = "StackSplitter"
version = "0.1.0"

dependencies = [
  "rich-click",
  'setuptools',
  'importlib-metadata; python_version>"3.6"',
]
license = {text = "GNU GPL ver3"}
readme = "README.md"
url="https://github.com/RomoloPoliti-INAF/stack_splitter"

[project.urls]
Changelog = "https://github.com/RomoloPoliti-INAF/stack_splitter/CHANGELOG.md"
Repository = "https://github.com/RomoloPoliti-INAF/stack_splitter"

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
stack_splitter = "StackSplitter.__main__:action"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]
